# heat_map_cpp

./: CMakeLists.txt  README.md  matrix.txt  matrix_maker.py  parallel.cpp  requirments.txt  run.py  seqential.cpp
headers/: equetion.h  helpers.h  plot.h
source/: equetion.cpp  helpers.cpp  plot.cpp
